deploy_jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkinspvc
          mountPath: /var/jenkins_home
      restartPolicy: Always
      volumes:
      - name: jenkinspvc
        persistentVolumeClaim:
          claimName: jenkinspvc
