ingress_jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: jenkins-ing
  namespace: jenkins
spec:
  rules:
  - host: jenkinslab.dev.cnpq.br
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        pathType: ImplementationSpecific
